# atml-group-11

./: .gitattributes  .gitignore  README.md
damon/: README.md
damon/docs/: components.html  index.html  models.html  utils.html
damon/notebooks/: examples.ipynb  experiments.ipynb  gat_reproduce.ipynb
damon/notebooks/results/: gat_results.json  gatd2_results.json  gatde_results.json  gatnsl_results.json  gatv2_results.json  gatv2nb_results.json  (+2 more)
damon/src/: setup.cfg
damon/src/oxgat/: __init__.py  components.py  models.py  utils.py
kally/: Pipfile  README.md
notebooks/: rough.ipynb
sam/: Dockerfile  README.md  results_agg.py  run.py  run_transductive.py  sweep.py
sam/best-configs-cora/: gatv2163.json  gatv2163.pt  gatv2272.pt  tr-small151.json  tr-small151.pt  tr-small157.pt  ut-small-dropout-annealing71.pt  ut-small-dropout-annealing73.json  ut-small-dropout-annealing73.pt  ut-small85.pt
sam/best-configs-ppi/: gatv2large12.json  gatv2tmp.json  tr-large1.json  tr-med.json  tr-med.pt  ut-large9.json  ut-large9.pt  ut-med.pt
sam/best-models/: small-dropout-annealing408.json  small-dropout-annealing408.pt  ut-large3.json
sam/config-patterns/: gat.json  gatv2.json  gatv2large.json  tr-large.json  tr-med.json  tr-small-dropout-annealing.json  tr-small.json  ut-large-annealed.json  ut-large-perfected.json  ut-large.json  ut-med.json  ut-small-dropout-annealing.json  ut-small.json
sam/experiments/: __init__.py  inductive.py  transductive.py  utils.py
sam/notebooks/: Graphs.ipynb
src/: setup.cfg
src/oxgat/: components.py  models.py  utils.py
(+17 files in other folders)
