[metadata]
name = oxgat
version = 0.0.1
author = ATML Group 11
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = oxgat
install_requires =
    pandas
    torch
    torch-geometric
    torch-sparse
    numpy
    pytorch-lightning
python_requires = >=3.7
